--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "~1.10.0",
+    "bower": "^1.3.12",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.0",
     "express": "~4.11.0",
