--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.11.0",
     "jade": "~1.9.1",
     "morgan": "~1.5.0",
+    "newrelic": "^1.16.2",
     "node-sass": "^2.0.1",
     "serve-favicon": "~2.2.0",
     "underscore": "^1.7.0"
